Fix canvases being cut off when zoomed on mobile

--- a/sass/_canvas.scss
+++ b/sass/_canvas.scss
@@ -10,7 +10,6 @@
 
 .image-canvas-container{
     display: flex;
-    justify-content: center;
     margin-top: 12px;
     max-width: 100%;
 }
